加入选择视频尺寸的功能

--- a/views/index/index.html
+++ b/views/index/index.html
@@ -17,6 +17,13 @@
         <input type="text" id="path-for-saving-files">
         <button id="btn-select-output-dir">选择输出目录</button>
     </span>
+    <span>
+        输出尺寸：
+        <label>
+            <select id="export-size-select">
+            </select>
+        </label>
+    </span>
 </div>
 <div class="container" id="list-container">
     Drag files in
