--- a/views/index/index.html
+++ b/views/index/index.html
@@ -11,19 +11,28 @@
 <body>
 <div class="container" id="buttons-container">
     <button id="btn-open-video-files">打开文件</button>
-    <button id="btn-start-encode">开始转码</button>
 
     <span id="select-save-path-controls-container">
-        <input type="text" id="path-for-saving-files">
-        <button id="btn-select-output-dir">选择输出目录</button>
+        <button id="btn-select-output-dir">导出目录</button>
+        <input type="text" id="path-for-saving-files" placeholder="导出目录">
     </span>
     <span>
-        输出尺寸：
+        导出尺寸：
         <label>
             <select id="export-size-select">
             </select>
         </label>
     </span>
+    <span>
+        导出格式：
+        <label>
+            <select id="export-format-select">
+                <option>mp4</option>
+            </select>
+        </label>
+    </span>
+
+    <button id="btn-start-encode">开始转码</button>
 </div>
 <div class="container" id="list-container">
     Drag files in
